<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/log_out_menu_item"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@drawable/log_out">
    </item>

    <item
        android:id="@+id/change_language_menu_item"
        android:title=""
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_language_24">
    </item>

    <item
        android:id="@+id/catalog_menu_item"
        android:title="@string/menu_catalog">
    </item>

    <item
        android:id="@+id/dish_search_menu_item"
        android:title="@string/menu_dish_search">
    </item>

    <item
        android:id="@+id/catering_establishment_search_menu_item"
        android:title="@string/menu_catering_establishment_search">
    </item>

    <item
        android:id="@+id/cart_menu_item"
        android:title="@string/menu_cart">
    </item>

    <item
        android:id="@+id/order_menu_item"
        android:title="@string/menu_orders">
    </item>

</menu>