<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_layout"
    tools:context=".activities.authentification.AuthorizationActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="117dp"
        android:layout_height="115dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_icon" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/authentication_authorization"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <EditText
        android:id="@+id/usernameAuthorizationEdit"
        android:layout_width="308dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/authentication_username_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameView" />

    <TextView
        android:id="@+id/registerUsernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:textSize="15sp"
        android:text="@string/authentication_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <TextView
        android:id="@+id/registerPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:text="@string/authentication_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameAuthorizationEdit" />

    <EditText
        android:id="@+id/passwordAuthorizationEdit"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/authentication_password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordView" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="authorize"
        android:text="@string/authentication_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_error" />

    <TextView
        android:id="@+id/has_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:text="@string/authentication_has_no_account"
        android:textColor="@color/strange"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/login_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/orange"
        android:onClick="openRegistrationForm"
        android:text="@string/authentication_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="522dp" />

    <TextView
        android:id="@+id/auth_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/authentication_log_in_error"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAuthorizationEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>