<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.authentification.RegistrationActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="117dp"
        android:layout_height="115dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_register" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/authentication_registration"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <EditText
        android:id="@+id/usernameRegistrationEdit"
        android:layout_width="308dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/authentication_username_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameView" />

    <TextView
        android:id="@+id/registerUsernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:text="@string/authentication_username"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <TextView
        android:id="@+id/registerPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:text="@string/authentication_password"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegistrationEdit" />

    <TextView
        android:id="@+id/registerPasswordView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:textSize="15sp"
        android:text="@string/authentication_password_confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegistrationEdit" />

    <EditText
        android:id="@+id/passwordRegistrationEdit"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/authentication_password_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordView" />

    <EditText
        android:id="@+id/rePasswordRegisterEdit"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/authentication_password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordView2" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/authentication_register"
        android:onClick="sendRegistrationRequest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rePasswordRegisterEdit" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="350dp"
        tools:layout_editor_absoluteY="522dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        android:textColor="@color/strange"
        android:textSize="12sp"
        android:text="@string/authentication_already_have_account"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:text="@string/authentication_log_in"
        android:textColor="@color/orange"
        android:onClick="openAuthorizationForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>