<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.dishordering.CartActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/cart_dish" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/cart_ingredients" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:textStyle="bold"
                android:textSize="13sp"
                android:text="@string/cart_ingredient_count" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/cart_dish_price" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="#A1A1A1" />
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/cart_total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/total_cart_sum_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/cart_empty"
        android:onClick="emptyCart"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:padding="6dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_cart_sum_value" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cart_confirm"
        android:onClick="sendCartPutRequest"
        android:backgroundTint="@color/dark_yellow"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_cart_sum_value" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cart_order"
        android:onClick="makeOrder"
        android:backgroundTint="@color/next"
        android:textColor="@color/white"
        android:padding="6dp"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_cart_sum_value" />
</androidx.constraintlayout.widget.ConstraintLayout>