<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.dishordering.OrderActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView336"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/order_dishes" />

            <TextView
                android:id="@+id/textView376"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/order_status" />

            <TextView
                android:id="@+id/textView363"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/order_number_in_queue" />

            <TextView
                android:id="@+id/textView396"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAlignment="center"
                android:text="@string/order_cooking_time" />

            <TextView
                android:id="@+id/textView346"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="#A1A1A1" />
    </TableLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/order_refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>