<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.search.DishSearchActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_ingredients_ingredient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:text="@string/dish_search_ingredient_choosing_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/search_ingredients_missed_ingredient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:text="@string/dish_search_missed_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_ingredients_ingredient_spinner" />

            <Spinner
                android:id="@+id/search_ingredients_ingredient_spinner"
                style="@style/spinner_style"
                android:layout_width="225dp"
                android:layout_height="38dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_ingredients_ingredient_title" />

            <EditText
                android:id="@+id/search_ingredients_missed_ingredient_count"
                android:layout_width="188dp"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:inputType="number"
                android:text="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_ingredients_missed_ingredient_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="323dp"
                android:layout_height="157dp"
                android:layout_marginTop="12dp"
                android:minHeight="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_ingredients_chosen_ingredient_title">

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/buttonContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:flexWrap="wrap">
                </com.google.android.flexbox.FlexboxLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/search_ingredients_chosen_ingredient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dish_search_chosen_ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_ingredients_missed_ingredient_count" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:text="@string/search_empty"
                android:onClick="emptyCanvas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/search_dishes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="60dp"
                android:text="@string/search_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2">

                <TextView
                    android:id="@+id/no_dishes_found"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/search_nothing_found" />

                <TextView
                    android:id="@+id/appropriate_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/dish_search_found_appropriate_dishes" />

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/appropriate_slider"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="0"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone"
                    app:iss_period="2000" />
                <TextView
                    android:id="@+id/almost_appropriate_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:gravity="center"
                    android:text="@string/dish_search_found_almost_appropriate_dishes" />
                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/almost_appropriate_slider"
                    android:layout_width="350dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="15dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="0"
                    android:visibility="gone"
                    app:iss_period="2000" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>